--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: '3'
 services:
   odoo:
     image: odoo:15.0
+    platform: "linux/amd64"
     restart: unless-stopped
     depends_on:
       - db
@@ -21,6 +22,7 @@ services:
 #      - ./odoo:/usr/lib/python3/dist-packages/odoo
   db:
     image: postgres:13
+    platform: "linux/amd64"
     restart: unless-stopped
     environment:
       - POSTGRES_PASSWORD=odoo
